--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+numpy
+pandas
 streamlit == 1.32.2
 keras == 3.1.1
 tensorflow == 2.16.1
@@ -6,8 +8,9 @@ joblib
 huggingface-hub == 0.22.2
 transformers == 4.40.1
 nltk == 3.8.1
-torchvision == 0.17.1
+torchvision
+torchvision.extension
 scikit-learn
 torch == 2.2.1 
 tf-keras
-tensorrt
+pywrap
